--- a/views/login.html
+++ b/views/login.html
@@ -1,126 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="icon" href="/newlogo" type="image/x-icon">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        .bg-image {
-            background-image: url('/bg');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            width: 100%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            color: white;
-            padding-top: 50px;
-        }
-        .header {
-            background: linear-gradient(to right, #294935, #62AF7F);
-            color: white;
-            padding: 5px;
-            text-align: left;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 50px;
-            line-height: 50px;
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-        }
-        .logo {
-            margin-top: 10px;
-            height: 45px;
-            margin-right: 8px;
-            margin-left: 20px;
-        }
-        .system-title {
-            font-size: 10px;
-            margin: 0;
-        }
-        .login-card {
-            margin-top: 20px;
-            border: 1px solid #29924F;
-            border-radius: 5px;
-            width: 600px;
-            padding: 10px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-left: 200px;
-        }
-        .form-control {
-            width: 60%;
-            margin: 10px auto;
-            box-shadow: none; 
-            border: 1px solid #ced4da; 
-            background-color: #f0f0f0;
-        }
-        .form-control:focus {
-            box-shadow: none; 
-            border-color: #29924F; 
-        }
-        .btn {
-            width: 30%;
-            margin: 10px auto;
-            background: linear-gradient(90deg, #28914F, #294935);
-            border: none; 
-            color: white;
-            margin-top: 40px;
-        }
-        .form-group label {
-            color: black; 
-            position: relative;
-            margin-left: 115px;
-            top: 16px; 
-        }
-        .login-title {
-            font-size: 24px; 
-            margin-left: 0; 
-            color: #28914F;
-            margin-top: 40px;
-            text-align: center;
-        }
-        .register-link {
-            text-align: center; 
-            margin-top: 20px;
-            color: #28914F;
-            font-size: small;
-        }
-    </style>
     <title>Log in</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/logincss" />
+  </head>
+  <body>
     <div class="header">
-        <img src="/logo1" alt="Logo" class="logo">
-        <h1 class="system-title">ILugan: An Intelligent Ultrasonic Sensor Fleet Management System and Seat Reservation for Bus Transportation Companies</h1>
+      <img src="/logo1" alt="Logo" class="logo" />
+      <h1 class="system-title">
+        ILugan: An Intelligent Ultrasonic Sensor Fleet Management System and
+        Seat Reservation for Bus Transportation Companies
+      </h1>
     </div>
     <div class="bg-image">
-        <div class="login-card">
-            <h2 class="login-title">Log In Form</h2> 
-            <h2 class="text-center">Login</h2>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="email">Email: </label>
-                    <input type="text" class="form-control" id="email" placeholder="Enter email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
-                <p class="register-link">Don't Have An Account? <a href="/register" style="color: #28914F;">Register Here</a></p>
-            </form>
-        </div>
+      <div class="login-card">
+        <h2 class="login-title">Log in to your iLugan Account!  </h2>
+        <h2 class="text-center">Login</h2>
+        <form id="login-form">
+          <div class="form-group">
+            <label for="email">Email: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="email"
+              placeholder="Enter email"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="Enter password"
+              required
+            />
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <p class="register-link">
+            Don't Have An Account?
+            <a href="/register" style="color: #28914f" title="Create account">Register Here</a>
+          </p>
+          <p class="forgot-password-link" id="forgotpassbtn" title="Rest your password">
+            Forgot Password?
+          </p>
+        </form>
+      </div>
     </div>
+    <!-- Loading Modal -->
+    <div
+      class="modal fade"
+      id="loadingModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="loadingModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+            <div class="spinner-border text-success" role="status">
+              <span class="sr-only">iLugan</span>
+            </div>
+            <p class="mt-3">Logging you in...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="/loginscript"></script>
-</body>
+    <script>
+    //   $("#loadingModal").modal("show"); // To show the modal
+    //   $("#loadingModal").modal("hide"); // To hide the modal
+    </script>
+
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script> -->
+  </body>
 </html>
