--- a/views/scheduling.html
+++ b/views/scheduling.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bus Schedule</title>
+    <title>Buses</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="icon" href="/newlogo" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
@@ -20,91 +22,13 @@
       rel="stylesheet"
       href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"
     />
-    <style>
-      body {
-        font-family: "Open Sans", sans-serif;
-        background-color: #f5f5f5;
-      }
-      .sidebar {
-        background: linear-gradient(to bottom, #29924f, #0c2c18);
-        min-height: 100vh;
-        width: 200px;
-        color: white;
-        position: fixed;
-        overflow-x: hidden;
-      }
-      .sidebar .nav-link {
-        color: white;
-        font-size: small;
-        font-weight: bold;
-      }
-      .sidebar .nav-link:hover {
-        background-color: #217841;
-      }
-      .sidebar .nav-link i {
-        margin-right: 8px;
-      }
-      .logo {
-        font-size: 20px;
-        font-weight: bold;
-        text-align: center;
-        margin-bottom: 30px;
-      }
-      .logo img {
-        width: 25px;
-        height: 40px;
-      }
-      .content {
-        padding: 20px;
-        flex-grow: 1;
-        margin-left: 200px;
-      }
-      .table th,
-      .table td {
-        font-size: 13px;
-      }
-      .table thead th {
-        background-color: #29924f;
-        color: white;
-      }
-      .table td {
-        background-color: #f0f0f0;
-      }
-      .table tr {
-        border-bottom: 1px solid #ccc;
-      }
-      .dataTables_wrapper {
-        margin-top: 20px;
-      }
-      .dataTables_wrapper .dataTables_paginate,
-      .dataTables_wrapper .dataTables_length,
-      .dataTables_wrapper .dataTables_filter {
-        margin: 20px 0;
-      }
-      /* Floating Action Button (FAB) */
-      .fab {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background-color: #29924f;
-        color: white;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-        cursor: pointer;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-      }
-    </style>
+    <link rel="stylesheet" href="/schedulecss" />
   </head>
   <body>
     <div class="d-flex">
       <div class="sidebar p-3">
         <div class="logo">
-          <img src="/logo" alt="Logo" />
+          <img src="/newlogo" alt="Logo" />
           <span>iLugan</span>
         </div>
         <ul class="nav flex-column">
@@ -114,8 +38,8 @@
             >
           </li>
           <li class="nav-item mb-3">
-            <a href="/analytics" class="nav-link"
-              ><i class="fas fa-chart-line"></i>Analytics and Reports</a
+            <a href="/terminals" class="nav-link"
+              ><i class="fas fa-map"></i>Terminal Management</a
             >
           </li>
           <li class="nav-item mb-3">
@@ -129,52 +53,91 @@
             >
           </li>
           <li class="nav-item mb-3">
-            <a href="#" class="nav-link"
-              ><i class="fas fa-calendar-alt"></i>Bus Scheduling</a
-            >
+            <a href="#" class="nav-link"><i class="fas fa-bus"></i>Buses</a>
           </li>
-          <li class="nav-item mb-3">
+          <!-- <li class="nav-item mb-3">
             <a href="/notifications" class="nav-link"
               ><i class="fas fa-bell"></i>Notifications</a
             >
+          </li> -->
+          <li class="nav-item mb-3">
+            <a href="/busalerts" class="nav-link"
+              ><i class="fas fa-exclamation-triangle"></i>Bus Alerts</a
+            >
+          </li>
+          <!-- <li class="nav-item mb-3">
+            <a href="/systemlogs" class="nav-link"
+              ><i class="fas fa-clipboard"></i>Logs</a
+            >
+          </li> -->
+          <li class="nav-item mb-3">
+            <a href="/iluganmobile" class="nav-link"
+              ><i class="fas fa-mobile-alt"></i> iLugan Mobile</a
+            >
           </li>
           <li class="nav-item mb-3">
-            <a href="/systemlogs" class="nav-link"
-              ><i class="fas fa-cog"></i>Settings</a
+            <a href="/analytics" class="nav-link"
+              ><i class="fas fa-chart-line"></i>Analytics and Reports</a
             >
           </li>
           <li class="nav-item mb-3" id="logout">
-            <a href="" class="nav-link"
-              ><i class="fas fa-sign-out-alt"></i>Log Out</a
-            >
+            <a class="nav-link"><i class="fas fa-sign-out-alt"></i>Log Out</a>
           </li>
         </ul>
       </div>
       <div class="content">
-        <h2>Bus Schedule</h2>
-        <table id="busSchedule" class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Bus Number</th>
-              <th>Plate Number</th>
-              <th>Destination</th>
-              <th>Conductor</th>
-              <th>Distance from Destination</th>
-              <th>ETA</th>
-              <th>Operation Time</th>
-              <th>Trips Made</th>
-            </tr>
-          </thead>
-          <tbody id="buses">
-            <!-- Bus data rows will go here -->
-          </tbody>
-        </table>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <h2>Buses and Information</h2>
+          <div
+            class="top-icons d-flex justify-content-between align-items-center"
+          >
+            <!-- <a href="/profile" class="top-icon-link me-3" title="Profile">
+              <i class="fas fa-user" style="margin-right: 20px;"></i>
+            </a> -->
+            <button class="btn btn-success" id="toscheds">
+              <i class="fa-regular fa-calendar" style="margin-right: 10px"></i
+              >See Schedules
+            </button>
+            <!-- <a href="/notifications" class="top-icon-link me-3" title="Notifications">
+              <i class="fas fa-bell" style="margin-right: 20px;"></i>
+            </a>
+            <a href="/systemlogs" class="top-icon-link" title="System Logs">
+              <i class="fas fa-cogs"></i>
+            </a> -->
+          </div>
+        </div>
+        <div class="table-responsive">
+          <table id="busSchedule" class="table table-striped table-responsive">
+            <thead>
+              <tr>
+                <th>Bus Number</th>
+                <th>Plate Number</th>
+                <th>Origin</th>
+                <th>Destination</th>
+                <th>VIA</th>
+                <th>Distance from Destination</th>
+                <th>ETA</th>
+                <th>Conductor</th>
+                <th>Trips Made</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="buses">
+              <!-- Bus data rows will go here -->
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
     <!-- Floating Action Button -->
-    <div class="fab" data-bs-toggle="modal" data-bs-target="#myModal">
-      <i class="fas fa-plus"></i>
+    <div
+      class="fab"
+      data-bs-toggle="modal"
+      data-bs-target="#myModal"
+      title="Add a new bus"
+    >
+      <i class="fas fa-plus"></i><i class="fas fa-bus"></i>
     </div>
 
     <!-- Modal -->
@@ -188,7 +151,9 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="myModalLabel">Add New Bus to the Fleet</h5>
+            <h5 class="modal-title" id="myModalLabel" style="font-weight: bold">
+              Add a new bus to the Fleet
+            </h5>
             <button
               type="button"
               class="btn-close"
@@ -197,40 +162,252 @@
             ></button>
           </div>
           <div class="modal-body">
-            <!-- Modal content (e.g., form fields) goes here -->
             <form id="busform">
-              <div class="mb-3">
-                <label for="busNumber" class="form-label">Bus Number</label>
-                <input type="text" class="form-control" id="busNumber" />
-                <label for="plateNumber" class="form-label">Plate Number</label>
-                <input type="text" class="form-control" id="plateNumber" />
+              <!-- Bus Number and Plate Number in one row -->
+              <!-- <img src="/greenbusicon" alt="bus image" id="modalimage" /> -->
+              <div class="mb-3 row">
+                <div class="col-6">
+                  <img src="/greenbusicon" alt="bus image" id="modalimage" />
+                </div>
+                <div class="col-6">
+                  <label for="busNumber" class="form-label">Bus Number</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="busNumber"
+                    required
+                  />
+                  <label for="plateNumber" class="form-label"
+                    >Plate Number</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="plateNumber"
+                    required
+                  />
+                </div>
+              </div>
+              <!-- Select Bus Terminal and Select Bus Destination in one row -->
+              <div class="mb-3 row">
+                <div class="col-6">
+                  <label for="terminal">Select Bus Terminal:</label>
+                  <select name="terminal" id="terminal" class="form-select">
+                    <!-- Options -->
+                  </select>
+                </div>
+                <div class="col-6">
+                  <label for="destinations">Select Bus Destination:</label>
+                  <select
+                    name="destinations"
+                    id="destinations"
+                    class="form-select"
+                  >
+                    <!-- Options -->
+                  </select>
+                </div>
               </div>
               <div class="mb-3">
-                <label for="Select Destination: "></label>
-                <select name="destinations" id="destinations">
-                  <!-- <option value="none">gadsgh</option> -->
-                </select>
+                <label for="route">Enter Bus Route(VIA):</label>
+                <input
+                  type="text"
+                  name="route"
+                  id="route"
+                  class="form-control"
+                  required
+                />
               </div>
-              <div class="mb-3">
-                <label for="seats">Seats Available: </label>
-                <input type="number" name="seats" id="seats">
+              <!-- Select Bus Type -->
+              <!-- Seats Available and Departure Time in one row -->
+              <div class="mb-3 row">
+                <div class="col-6">
+                  <label for="bustype">Select Bus Type:</label>
+                  <select name="bustype" id="bustype" class="form-select">
+                    <option value="airconditioned">Air-Conditioned</option>
+                    <option value="deluxe">Deluxe</option>
+                    <option value="ordinary">Ordinary</option>
+                  </select>
+                </div>
+                <div class="col-6">
+                  <label for="seats">Seats Available:</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    name="seats"
+                    id="seats"
+                    required
+                  />
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="departuretime">Departure Time: </label>
-                <input type="time" name="depttime" id="depttime">
+              <!-- Submit Button -->
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-success" id="add">
+                  Add to Fleet
+                </button>
               </div>
-              <!-- Additional form fields as needed -->
             </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Edit Bus Modal -->
+    <div
+      class="modal fade"
+      id="editBusModal"
+      tabindex="-1"
+      aria-labelledby="editBusModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5
+              class="modal-title"
+              id="editBusModalLabel"
+              style="font-weight: bold"
+            >
+              Edit Bus Information
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="editBusForm">
+              <!-- Bus Number and Plate Number in one row -->
+              <div class="mb-3 row">
+                <div class="col-6">
+                  <img src="/greenbusicon" alt="bus image" id="modalimage" />
+                </div>
+                <div class="col-6">
+                  <label for="editBusNumber" class="form-label"
+                    >Bus Number</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editBusNumber"
+                    readonly
+                  />
+                  <label for="editPlateNumber" class="form-label"
+                    >Plate Number</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editPlateNumber"
+                  />
+                </div>
+              </div>
+              <!-- Select Bus Terminal and Select Bus Destination in one row -->
+              <div class="mb-3 row">
+                <div class="col-6">
+                  <label for="editTerminal">Select Bus Terminal:</label>
+                  <select name="terminal" id="editTerminal" class="form-select">
+                    <!-- Options -->
+                  </select>
+                </div>
+                <div class="col-6">
+                  <label for="editDestinations">Select Bus Destination:</label>
+                  <select
+                    name="destinations"
+                    id="editDestinations"
+                    class="form-select"
+                  >
+                    <!-- Options -->
+                  </select>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="editedroute">Enter Bus Route(VIA):</label>
+                <input
+                  type="text"
+                  name="editedroute"
+                  id="editedroute"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <!-- Select Bus Type -->
+              <!-- Seats Available and Departure Time in one row -->
+              <div class="mb-3 row">
+                <div class="col-6">
+                  <label for="editBusType">Select Bus Type:</label>
+                  <select name="bustype" id="editBusType" class="form-select">
+                    <option value="airconditioned">Air-Conditioned</option>
+                    <option value="deluxe">Deluxe</option>
+                    <option value="ordinary">Ordinary</option>
+                  </select>
+                </div>
+                <div class="col-6">
+                  <label for="editSeats">Seats Available:</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="editSeats"
+                    readonly
+                  />
+                </div>
+              </div>
+              <!-- Update Button -->
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-success"
+                  id="updateBusButton"
+                >
+                  Update Bus Data
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Assign Conductor Modal -->
+    <div
+      class="modal fade"
+      id="assignConductorModal"
+      tabindex="-1"
+      aria-labelledby="assignConductorModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5
+              class="modal-title"
+              id="assignConductorModalLabel"
+              style="font-weight: bold"
+            >
+              Choose a Conductor
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <h6>Below are your available conductors</h6><br>
+            <div id="conductorList" class="d-flex flex-wrap gap-3">
+              <!-- Dummy conductor containers -->
+            </div>
           </div>
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-danger"
-              data-bs-dismiss="modal"
+              class="btn btn-primary"
+              id="assignConductorButton"
+              disabled
             >
-              Close
+              Assign
             </button>
-            <button type="button" class="btn btn-success" id="add">Add to Fleet</button>
           </div>
         </div>
       </div>
@@ -240,10 +417,11 @@
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
-      $(document).ready(function () {
-        $("#busSchedule").DataTable();
-      });
+      // $(document).ready(function () {
+      //   $("#busSchedule").DataTable();
+      // });
     </script>
     <script type="module" src="/busesjs"></script>
+    <script type="module" src="/monitoring"></script>
   </body>
 </html>
