--- a/css/buses.css
+++ b/css/buses.css
@@ -214,3 +214,14 @@ body {
   margin-bottom: 10px;
 }
 
+#toscheds:hover{
+  color: green;
+  background-color: white;
+}
+
+#toscheds{
+  background-color: green;
+  color: white;
+  border: none;
+}
+
