--- a/views/register.html
+++ b/views/register.html
@@ -22,10 +22,11 @@
         Seat Reservation for Bus Transportation Companies
       </h1>
     </div>
-
+<!-- <div class="loader"></div> -->
     <div class="modal" id="termsModal">
       <div class="modal-content">
         <div class="modal-header">
+          <!-- <div class="loader"></div> -->
           <h5 class="modal-title">Terms and Conditions</h5>
         </div>
         <div class="modal-body">
