--- a/views/scheduling.html
+++ b/views/scheduling.html
@@ -87,14 +87,14 @@
       </div>
       <div class="content">
         <div class="d-flex justify-content-between align-items-center mb-4">
-          <h2>Buses and Information</h2>
+          <h3>Buses and Information</h3>
           <div
             class="top-icons d-flex justify-content-between align-items-center"
           >
             <!-- <a href="/profile" class="top-icon-link me-3" title="Profile">
               <i class="fas fa-user" style="margin-right: 20px;"></i>
             </a> -->
-            <button class="btn btn-success" id="toscheds">
+            <button class="btn" id="toscheds" title="See Bus Schedules">
               <i class="fa-regular fa-calendar" style="margin-right: 10px"></i
               >See Schedules
             </button>
